# oval

./: pyproject.toml
examples/: validate.py
notebooks/: explore.ipynb  naive.ipynb  projected.ipynb
oval/: conversation.py  decomposition.py  io.py  variable.py
