[project]
name = "oval"
version = "0.1.0"
description = ""
authors = [
    {name = "Maanas Arora",email = "maanasarora23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2,<3.0.0)",
    "pandas (>=2.2,<4.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "pydantic (>=2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
