[project]
name = "oval"
version = "0.1.0"
description = ""
authors = [
    {name = "Maanas Arora",email = "maanasarora23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "umap-learn (>=0.5.11,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
